# Referee

./: .gitmodules  CMakeLists.txt  Docker_commands.sh  Dockerfile  INSTALL.md  README.md  plot_probabilities.py  problem-statement.md
Results/: One_page_synthesis.md
cmake/: functions.cmake
src/: CMakeLists.txt  Referee.hh  main.cc  referee.cc
src/Referee/: CMakeLists.txt
src/Referee/GeometricTransformations/: GeometricTransformation.cc  GeometricTransformation.hh
src/Referee/Mapping/: Mapping.cc  Mapping.hh
src/Referee/Probability/: Probability.cc  Probability.hh
src/Referee/Raster/: Raster.cc  Raster.hh
src/Referee/Utils/: Utils.cc  Utils.hh
src/Referee/Visualisation/: Visualisation.cc  Visualisation.hh
src/tests/: CMakeLists.txt
src/tests/UnitTests/: test_1D_gradient_descent.cc  test_1D_probability_density_function.cc  test_3D_probability_density_function.cc  test_chasles_transformation.cc  test_loop_closure.cc  test_mean_transformation.cc  test_plane_intersection.cc  test_pose_as_vector_to_transform_matrix.cc  test_probability_density_function.cc  test_resulting_rotation.cc  test_resulting_translation.cc  test_transform_matrix_to_twist.cc  test_translations.cc
test_files/geolocations/: position13h18m19s.csv  position13h22m50s.petitpoucet  position13h28m23s.petitpoucet  position14h1m58s.csv
