# test on mean translation calculation
add_executable(${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS} ${CMAKE_CURRENT_SOURCE_DIR}/UnitTests/${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS}.cc)
target_link_libraries(${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS} ${SHARED_LIB_NAME})
add_test(NAME ${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS} 
        COMMAND ${CMAKE_BINARY_DIR}/tests/${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS})
add_dependencies(${UNIT_TEST_EXECUTABLE_NAME_TRANSLATIONS} ${SHARED_LIB_NAME})

# test on mean transformation matrix calculation
add_executable(${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION} ${CMAKE_CURRENT_SOURCE_DIR}/UnitTests/${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION}.cc)
target_link_libraries(${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION} ${SHARED_LIB_NAME})
add_test(NAME ${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION} 
        COMMAND ${CMAKE_BINARY_DIR}/tests/${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION})
add_dependencies(${UNIT_TEST_EXECUTABLE_NAME_MEAN_TRANSFORMATION} ${SHARED_LIB_NAME})

# test on Chasles transformation
add_executable(${UNIT_TEST_EXECUTABLE_NAME_CHASLES} ${CMAKE_CURRENT_SOURCE_DIR}/UnitTests/${UNIT_TEST_EXECUTABLE_NAME_CHASLES}.cc)
target_link_libraries(${UNIT_TEST_EXECUTABLE_NAME_CHASLES} ${SHARED_LIB_NAME})
add_test(NAME ${UNIT_TEST_EXECUTABLE_NAME_CHASLES} 
        COMMAND ${CMAKE_BINARY_DIR}/tests/${UNIT_TEST_EXECUTABLE_NAME_CHASLES})
add_dependencies(${UNIT_TEST_EXECUTABLE_NAME_CHASLES} ${SHARED_LIB_NAME})

# test on plane intersection
add_executable(${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION} ${CMAKE_CURRENT_SOURCE_DIR}/UnitTests/${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION}.cc)
target_link_libraries(${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION} ${SHARED_LIB_NAME})
add_test(NAME ${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION} 
        COMMAND ${CMAKE_BINARY_DIR}/tests/${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION})
add_dependencies(${UNIT_TEST_EXECUTABLE_NAME_PLANE_INTERSECTION} ${SHARED_LIB_NAME})